<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <Button
        android:id="@+id/fragmentSearchBack"
        style="@style/ButtonSmall"
        android:layout_width="@dimen/default_width"
        android:layout_height="@dimen/default_height"
        android:text="@string/fragment_search_back"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragmentSearchTextInputUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/fragmentSearchBack"
        app:layout_constraintRight_toLeftOf="@+id/fragmentSearchOpenPage"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/fragmentSearchEdittextUrl"
            style="@style/TextStyle"
            android:text="http://www.google.com"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/fragment_search_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/fragmentSearchOpenPage"
        style="@style/TextStyle"
        android:layout_width="@dimen/default_height"
        android:layout_height="@dimen/default_height"
        android:text="@string/fragment_search_go"
        android:textAllCaps="false"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.webviewblock.components.WebViewCustom
        android:id="@+id/fragmentSearchWebView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentSearchOpenPage" />

</androidx.constraintlayout.widget.ConstraintLayout>